# f-blog

./: .gitignore  LICENSE  README.md  pyproject.toml
flaskr/: __init__.py  auth.py  blog.py  db.py
flaskr/templates/: base.html
flaskr/templates/auth/: register.html
flaskr/templates/blog/: create.html  index.html  update.html
tests/: conftest.py  test_auth.py  test_bolg.py  test_db.py  test_factory.py
