[project]
name = "flaskr"
version = "0.0.1"
authors = [
    {name="Cherif ATTA", email="cherif.atta.aef@gmail.com"},
]
description = "A small blog with flask 3"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "flask",
]


[tool.hatch.envs.default]
python = "3.12"


[project.optional-dependencies]
cli = [
    "click",
]


[project.urls]
Homepage = "https://github.com/cherif-atta/f-blog"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"